# pwai-basic-notion-kanban-api

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
